fixing hidden/visible text

--- a/stylesheet_1.css
+++ b/stylesheet_1.css
@@ -141,12 +141,12 @@ color: #1e1e1e;
 visibility: hidden;
 }
 
-#HiddenText_Apartment {
+#HiddenText_Apartment, #HiddenText_House, #HiddenText_Motel, #HiddenText_ApartmentComplex, #HiddenText_Tower, #HiddenText_Skyscraper {
 visibility: hidden;
 position: fixed;
 }
 
-#VisibleText_Apartment {
+#VisibleText_Apartment, #VisibleText_House, #VisibleText_Motel, #VisibleText_ApartmentComplex, #VisibleText_Tower, #VisibleText_Skyscraper {
 visibility: visible;
 position: relative;
 text-align: center;
